[EGCS] Create base rule set for jobs allocation and prioritization + example prioritization modification